--- a/samples/sample.properties
+++ b/samples/sample.properties
@@ -4,12 +4,12 @@
 executableName = sample_kcl.rb
 
 # The name of an Amazon Kinesis stream to process.
-streamName = kclrbsample
+streamName = kinesis_stream_1
 
 # Used by the KCL as the name of this application. Will be used as the name
 # of an Amazon DynamoDB table which will store the lease and checkpoint
 # information for workers with this application name
-applicationName = RubyKCLSample
+applicationName = GrabApp
 
 # Users can change the credentials provider the KCL will use to retrieve credentials.
 # The DefaultAWSCredentialsProviderChain checks several other providers, which is
